# learning-python-tooling

./: README.md  ROADMAP.md  main.py  pyproject.toml
.cursor/rules/: teacher-rule.mdc
